Opened 13 years ago

Closed 13 years ago

#2408 closed defect (fixed)

ffplay A/V sync regression

Reported by: Carl Eugen Hoyos Owned by: Marton Balint
Priority: important Component: ffplay
Version: git-master Keywords: desync regression
Cc: cus@passwd.hu Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

(http://thread.gmane.org/gmane.comp.video.mplayer.user/69641 I have no idea if the MPlayer issue is actually related, probably not)

I will attach a flv sample that transcodes fine with ffmpeg, plays with increasing A/V desync with ffplay since e96175a (Add -af option).

$ ffplay glitch-at-0005-0011-0017-etc_cut.flv
ffplay version N-51332-g46c48d5 Copyright (c) 2003-2013 the FFmpeg developers
  built on Mar 27 2013 00:44:39 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 22.101 / 52. 22.101
  libavcodec     55.  1.100 / 55.  1.100
  libavformat    55.  0.100 / 55.  0.100
  libavdevice    55.  0.100 / 55.  0.100
  libavfilter     3. 48.105 /  3. 48.105
  libswscale      2.  2.100 /  2.  2.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  2.100 / 52.  2.100
Input #0, flv, from 'glitch-at-0005-0011-0017-etc_cut.flv': f=0/0
  Duration: 00:00:30.21, start: 0.000000, bitrate: 677 kb/s
    Stream #0:0: Video: h264 (Main), yuv420p, 768x432 [SAR 1:1 DAR 16:9], 876 kb/s, 25 tbr, 1k tbn, 50 tbc
    Stream #0:1: Audio: aac, 48000 Hz, stereo, fltp, 96 kb/s
   7.61 A-V: -0.032 fd=   0 aq=    3KB vq=   22KB sq=    0B f=0/0

Attachments (1)

glitch-at-0005-0011-0017-etc_cut.flv (2.4 MB ) - added by Carl Eugen Hoyos 13 years ago.

Change History (3)

by Carl Eugen Hoyos, 13 years ago

comment:1 by Marton Balint, 13 years ago

Cc: cus@passwd.hu added
Owner: set to Marton Balint
Status: newopen

comment:2 by Carl Eugen Hoyos, 13 years ago

Resolution: fixed
Status: openclosed

Fixed by Marton.

Note: See TracTickets for help on using tickets.