ffplay: set time_base of audio filter buffer src

Fixes ticket #2408.

Signed-off-by: Marton Balint <cus@passwd.hu>